--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "sqlite3": "^5.1.6",
+    "imon-videos-downloader": "^0.0.4",
     "winston": "^3.17.0",
     "youtube-dl-exec": "^3.0.22",
     "yt-search": "^2.13.1",
